# jarr

python/: CMakeLists.txt  README.md  pyproject.toml
python/src/jarr/: __init__.py
python/src/jarr-ext/include/jarr/: main.hpp
python/src/jarr-ext/src/: bindings.cpp  main.cpp
python/tests/: test_extension.py
